Fix audit report issues: Standardize DIP/ISP ratings in LLD problems and enhance documentation with code examples and detailed explanations